[package]
name = "business_directory_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
tokio = { version = "1.28.2", features = ["full"] }
sea-orm = { version = "0.11.3", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
tower-http = { version = "0.4.1", features = ["cors"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
dotenv = "0.15.0"
sea-orm-migration = "0.11.0"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
